tests/test_error_shadow_var.err
Error in line 6: "a" shadows a variable.
