tests/test_error_shadow_var.uk
def main() void{
    int a;
    a = 5;
    println(a);
    do{
        int a;
        println(b);
        a = a + 1;
    }
    while(a<10)
    println(a);
    return();
}
